--- a/res/layout/activity_avatar.xml
+++ b/res/layout/activity_avatar.xml
@@ -23,11 +23,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/avatar" />
 
+    <Button
+        android:id="@+id/store"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wallet" />
+
     <GridView
         android:id="@+id/gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/wallet"
+        android:layout_below="@+id/store"
         android:columnWidth="90dp"
         android:gravity="center"
         android:horizontalSpacing="10dp"
